# ml_services_comparison

./: .gitignore  README.md  build_docker.sh  build_poetry.sh  demo_model.sh  docker-compose.yml
client/: Dockerfile  client.py  pyproject.toml  run.sh
graphql_service/: Dockerfile  common_model.py  main.py  pyproject.toml
grpc_service/: Dockerfile  main.py  ml_service_pb2.py  ml_service_pb2_grpc.py  pyproject.toml
grpc_service/proto/: ml_service.proto
rest_service/: main.py  pyproject.toml
