[tool.poetry]
name = "grpc-service"
version = "0.1.0"
description = ""
authors = ["jon <jonathan.cagua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
grpcio = "^1.50.0"
grpcio-tools = "^1.50.0"
scikit-learn = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"