[tool.poetry]
name = "rest-service"
version = "0.1.0"
description = ""
authors = ["jon <jonathan.cagua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
scikit-learn = "^1.0.0" # Para el modelo toy

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"